--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "geo-maps",
     "description": "Roll your own TopoJSON from Natural Earth.",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/quantmind/maps.git"
+    },
     "devDependencies": {
         "d3-dsv": "1.0",
         "d3-geo-projection": "2.3",
@@ -9,5 +13,8 @@
         "topojson-server": "3.0",
         "topojson-client": "3.0",
         "topojson-simplify": "3.0"
+    },
+    "scripts": {
+        "prepare": "bash map.sh"
     }
 }
