--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "geo-maps",
-    "description": "Roll your own TopoJSON from Natural Earth.",
+    "description": "Pre-built TopoJSON from Global Administrative Area",
     "repository": {
         "type": "git",
-        "url": "https://github.com/quantmind/maps.git"
+        "url": "https://github.com/quantmind/topo-regions.git"
     },
     "devDependencies": {
         "d3-dsv": "1.0",
@@ -15,6 +15,8 @@
         "topojson-simplify": "3.0"
     },
     "scripts": {
-        "prepare": "bash map.sh"
+        "prepare": "bash dev/map.sh",
+        "postpublish": "VERSION=`node -e 'console.log(require(\"./package.json\").version)'`; git push && git tag -am \"Release $VERSION.\" v${VERSION} && git push --tags && mkdir -p ../giottojs.org/latest && mkdir -p ../giottojs.org/d3-visualize/${VERSION} && cp build/* ../giottojs.org/d3-visualize/${VERSION}/ && cp build/* ../giottojs.org/latest/ && cd ../giottojs.org && git add d3-visualize/${VERSION} latest && git commit -a -m \"d3-visualize ${VERSION}\" && git push",
+        "release": "publish"
     }
 }
