--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     },
     "scripts": {
         "lint": "eslint site",
-        "rollup": "rollup -c site/rollup.config.js --banner \"$(preamble)\"",
-        "dev": "rollup -c site/rollup.config.js -w",
+        "rollup": "rollup -c dev/rollup.config.js --banner \"$(preamble)\"",
+        "dev": "rollup -c dev/rollup.config.js -w",
         "css": "node-sass site/site.scss website/assets/site.css --include-path node_modules --output-style compressed",
         "minify": "uglifyjs --preamble \"$(preamble)\" website/assets/site.js -c -m -o website/assets/site.min.js",
-        "site": "./site/build.sh && yarn rollup && yarn minify && yarn css",
+        "site": "./dev/build.sh && yarn lint && yarn rollup && yarn minify && yarn css",
         "serve": "http-server website/",
         "maps": "bash dev/map.sh"
     }
